--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -9,6 +9,9 @@
 @import 'base/fonts';
 @import 'base/text';
 
+/* Components */
+@import 'components/buttons'; 
+
 // Sections
 @import 'sections/header';
 
@@ -17,20 +20,22 @@ body {
     background-repeat: no-repeat;
 }
 .page-recupera-contrasena {
-   /*  background-image: url(../images/m-recuperar-contraseña-5.jpg); */
    /*  background-image: url(../images/m-recuperar-contraseña-1.jpg); */
    /*  background-image: url(../images/m-menu-principal.jpg); */
    /*  background-image: url(../images/m-recuperar-contraseña-2.jpg); */
    /*  background-image: url(../images/m-recuperar-contraseña-3.jpg); */
    /*  background-position: center 46px; */
 }
+/* .page-registro-usuario {
+    background-image: url(../images/m-registro-mobile.jpg);
+} */
 
-.wrapper {
+/* .wrapper {
     max-width: 375px;
     margin: 0 auto;
     height: 800px;
     border:1px solid lightgray;
-}
+} */
 
 .page-login  {
     .logo-brand {
@@ -41,7 +46,6 @@ body {
         margin-top: 32px;
     }
 }
-
 
 .content-page {
     padding: 10px 20px;
@@ -62,33 +66,6 @@ body {
     color: $black-light;
 }
 
-.btn-verde {
-    color:white;
-    background-color: $green;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 1rem;
-    &:hover {
-        color:white;
-        background-color: $green-dark;
-    }
-}
-
-
-.btn-restablecer {
-    color:white;
-    background: $gray-dark;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 1rem;
-    &:hover {
-        color:white;
-        background-color:$gray;
-    }
-}
-
 
 .link {
     display: block;
@@ -102,9 +79,10 @@ body {
 .box-redes-login  {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin-top: 24px;
-    padding: 0 20px;
+    margin-top: 19px;
+    a {
+        margin-right: 35px;
+    }
 }
 
 .btn-redes {
@@ -332,5 +310,139 @@ body {
         line-height: 30px;
         text-align: center;
         font-weight: bold;
+    }
+}
+
+
+.breadcrumb {
+    background-color: transparent;
+    padding: 0.2rem 0.2rem;
+    margin-bottom: 0.2rem;
+    li {
+        color: $blue;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 22px;
+        font-weight: 600;
+        &.active {
+            color: $blue;
+            &:before {
+                color: $blue;
+            }
+        }
+    }
+}
+
+.step {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin-bottom: 1rem;
+    .step-item {
+        flex: 1 1 0;  
+       /*  flex-grow: 1; */
+        position: relative;
+        text-align: center;
+        &:not(:first-child)::before {
+            background-color: #D9D9D6;
+            content: "";
+            height: 0.125rem;
+            left: -50%;
+            position: absolute;
+            top: 0.7375rem;
+            width: 100%;
+            z-index: 0;
+        } 
+        &:nth-child(2)::before {
+            width: 65%;
+            left: -32%;
+        } 
+        &:nth-child(3)::before {
+            width: 65%;
+            left: -32%;
+        } 
+        &.active {
+           a {
+               &::before {
+                background: #fff;
+                border: 3px solid $blue;
+               }
+               span {
+                   color:$blue;
+               }
+           }
+           p {
+               color:$blue;
+           }
+        }
+
+        p {
+            color: $black-light;
+            font-size: 14px;
+            margin-top: 12px;
+        }
+
+        .step-item-link {
+            color: #69707a;
+            position: relative;
+            display: inline-block;
+            padding-top: 1.25rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            text-decoration: none;
+            z-index: 1;
+            span {
+                color:white;
+                position: absolute;
+                top: 4px;
+                z-index: 11;
+                left: 11px;
+                display: flex;
+                font-weight: bold;
+            }
+            &:before {
+                background-color: $gray;
+                border: 0.125rem solid #fff;
+                border-radius: 100%;
+                content: "";
+                display: block;
+                height: 2rem;
+                width: 2rem;
+                left: 50%;
+                position: absolute;
+                top: 0;
+                transform: translateX(-50%);
+                z-index: 1;
+            }
+        }
+      }
+ }
+
+ 
+.dual-btn {
+    margin-top: 25px;
+    flex-direction: column;
+    a {
+        margin-bottom: 20px;
+    }
+}
+
+.content-page-form {
+    padding: 17px 20px;
+}
+
+.layout-formulario {
+    margin-top: 26px;
+}
+
+.form-group-all {
+    margin-top: 26px;
+}
+
+.row-texto-form {
+    margin-top: 60px;
+    p {
+        color: $black-light;
+        font-size: 14px;
     }
 }
