--- a/scss/pages/_descarga-boleta.scss
+++ b/scss/pages/_descarga-boleta.scss
@@ -121,7 +121,7 @@
 .section-datos-boleta {
     background-color: white;
 }
-.item-dato {
+.item-footer-dato {
     display: flex;
     align-items: center;
     height: 80px;
