--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,16 +37,14 @@
 @import 'pages/descarga-boleta';
 
 
-/* .page {
-   background-image: url(../images/login-portal-cliente.jpg);
+.page {
+    background-image: url(../images/m-registro-formulario.jpg);
     background-position: 0 center;
-    background-position: center 72px;
     background-repeat: no-repeat;
     .main, .content-page-tab {
         background-color: transparent;
     }
 }
- */
 
 /*  
 .header-top {
