--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3115,6 +3115,82 @@ a {
   font-weight: bold;
 }
 
+.box-switch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.box-switch .switch {
+  display: inline-block;
+  height: 21px;
+  position: relative;
+  width: 54px;
+}
+.box-switch .switch input {
+  display: none;
+}
+.box-switch .slider {
+  background-color: #E7F0FF;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.box-switch .slider:before {
+  background-color: #19CE74;
+  background-color: #B7C0CE;
+  bottom: 0;
+  content: "";
+  height: 21px;
+  left: 4px;
+  position: absolute;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  width: 21px;
+  border: 1px solid #FFFFFF;
+  -webkit-box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.1);
+}
+.box-switch input:checked + .slider {
+  background-color: #D2FFE9;
+}
+.box-switch input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+          transform: translateX(26px);
+  background-color: #19CE74;
+}
+.box-switch .slider.round {
+  border-radius: 34px;
+}
+.box-switch .slider.round:before {
+  border-radius: 50%;
+}
+.box-switch .slider.round:before {
+  border-radius: 50%;
+}
+.box-switch .custom-control-label {
+  margin-bottom: 0;
+  margin-left: 20px;
+  font-size: 14px;
+}
+.box-switch .custom-control-label:before, .box-switch .custom-control-label:after {
+  display: none;
+}
+.box-switch.inline-switch {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.box-switch.inline-switch .custom-control-label {
+  color: #5F6268;
+  margin-left: 0;
+  max-width: 75%;
+}
+
 /* Components */
 .btn-verde {
   color: white;
@@ -3165,6 +3241,10 @@ a {
   color: white;
   font-weight: bold;
   padding: 1rem;
+}
+
+.form-group select.form-control-lg.form-control {
+  height: 60px;
 }
 
 /* NAV */
@@ -3483,6 +3563,7 @@ body {
 }
 
 .page-recupera-contrasena {
+  /*  background-image: url(../images/m-registro-formulario.jpg); */
   /*  background-image: url(../images/m-recuperar-contraseña-1.jpg); */
   /*  background-image: url(../images/m-menu-principal.jpg); */
   /*  background-image: url(../images/m-recuperar-contraseña-2.jpg); */
@@ -3490,10 +3571,11 @@ body {
   /*  background-position: center 46px; */
 }
 
-.page-registro-usuario {
-  /* background-image: url(../images/m-registro-mobile4.jpg); */
-}
-
+/* .page-registro-usuario {
+    background-image: url(../images/m-registro-formulario.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+} */
 /* .wrapper {
     max-width: 375px;
     margin: 0 auto;
@@ -3533,6 +3615,10 @@ body {
 
 .box-redes {
   margin-top: 40px;
+}
+
+.layout-redes {
+  margin-bottom: 26px;
 }
 
 .box-redes-login {
@@ -3910,11 +3996,12 @@ body {
 }
 
 .content-page-form {
+  /*  padding: 17px 20px; */
   padding: 17px 20px;
 }
 
 .layout-formulario {
-  margin-top: 26px;
+  padding-bottom: 40px;
 }
 
 .form-group-all {
@@ -3993,4 +4080,21 @@ body {
 .title-pregunta {
   color: #003287;
   font-size: 16px;
+}
+
+.text-form {
+  color: #5F6268;
+  font-size: 12px;
+}
+
+.lista-switch {
+  margin-top: 32px;
+}
+.lista-switch .item-switch {
+  margin-bottom: 18px;
+}
+
+.formulario-registro p {
+  color: #5F6268;
+  font-size: 12px;
 }
