--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -12,6 +12,7 @@
 
 /* Components */
 @import 'components/buttons'; 
+@import 'components/form'; 
 
 // Sections
 @import 'sections/header';
@@ -34,12 +35,11 @@ body {
     background-position: top center;
 } */
 
-/* .wrapper {
+.wrapper {
     max-width: 375px;
     margin: 0 auto;
-    height: 800px;
     border:1px solid lightgray;
-} */
+}
 
 .page-login  {
     .logo-brand {
